<resources>
    <string name="app_name">Trabalho 1 - DCC 196</string>
    <string name="cadastros">Cadastros:</string>
    <string name="livro">Livro</string>
    <string name="participante">Participante</string>
    <string name="reserva">Reserva</string>
    <string name="cadastro">Cadastro</string>
    <string name="digite_a_editora">Digite a editora</string>
    <string name="digite_o_ano_de_publica_o">Digite o ano de publicação</string>
    <string name="digite_o_t_tulo">Digite o título</string>
    <string name="salvar">Salvar</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="voltar">Voltar</string>
    <string name="nome_participante">Nome Participante</string>
    <string name="ano_publicacao">Ano Publicação:</string>
    <string name="editora">Editora:</string>
    <string name="textview">TextView</string>
    <string name="atualizar">Atualizar</string>
    <string name="reservas_realizadas">Reservas realizadas</string>
    <string name="email">Email:</string>
    <string name="hora_de_entrada">Hora de entrada:</string>
    <string name="hora_de_sa_da">Hora de saída:</string>
    <string name="nome">Nome:</string>
    <string name="status_do_participante">Status do Participante</string>
    <string name="textview2">TextView</string>
</resources>
