<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ufjf.trabalho2.View.ActivityParticipante">

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_do_participante"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/lblHrInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_entrada"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintRight_toLeftOf="@+id/txtEmail"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/lblhrFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_sa_da"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/lblHrInicial"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txtNomeParticipante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtEmail"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblNome"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeParticipante"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/lblEmail"
        android:layout_marginLeft="14dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtHrEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHrInicial"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/lblHrInicial"
        android:layout_marginLeft="7dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtHrSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblhrFinal"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/lblhrFinal"
        android:layout_marginLeft="7dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Voltar"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/txtHrSaida"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtHrSaida"
        android:layout_marginLeft="23dp"
        tools:ignore="HardcodedText" />
</android.support.constraint.ConstraintLayout>
